--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Angel Hack</title>
     <link rel="stylesheet" href="main.css">    
-	<script src="../../scripts/jquery.min.js"></script>
+	<script src="./sdk/scripts/jquery.min.js"></script>
 	<script type="text/javascript" src="./sdk/scripts/js.ext.js"></script>
 	<script type="text/javascript" src="./sdk/scripts/js.ext.dom.js"></script>
 	<script type="text/javascript" src="./sdk/engine/Module.js"></script>
