Erasing works, but takes out chunks at a time

--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -17,6 +17,7 @@
 	<canvas id="canvas" oncontextmenu="event.preventDefault();"></canvas>
 	<button type="button" onclick="uploadImageClicked()">Upload Image</button> 
 	<button type="button" onclick="colourItClicked()">Colour It!</button>
+	<button type="button" onclick="changeMode()">Change Mode</button>
 
 	<input type="range" min="0" max="100" value="50" onchange="vibranceSliderOnChange(this.value)" oninput="vibranceSliderChanging(this.value)"/>
 
