--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -24,6 +24,8 @@
 	<button type="button" onclick="colourItClicked()">Colour It!</button>
 	<button type="button" onclick="changeMode()">Change Mode</button>
 	<button type="button" onclick="saveImageClicked()"">Save Your Art</button>
+	<button type="button" onclick="tagItClicked()"">Tag It!</button>
+
 	<input type="range" min="0" max="100" value="50" onchange="vibranceSliderOnChange(this.value)" oninput="vibranceSliderChanging(this.value)"/>
 
 	<input type="range" min="0" max="100" value="50" onchange="hueSliderOnChange(this.value)" oninput="hueSliderChanging(this.value)"/>
