--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -5,26 +5,18 @@
     <title>Angel Hack</title>
     <link rel="stylesheet" href="main.css">
 	<script src="./sdk/scripts/jquery.min.js"></script>
-	<!-- <script type="text/javascript" src="./sdk/scripts/js.ext.js"></script>
-	<script type="text/javascript" src="./sdk/scripts/js.ext.dom.js"></script>
-	<script type="text/javascript" src="./sdk/engine/Module.js"></script>
-	<script async type="text/javascript" src="./sdk/engine/WacomInkEngine.js"></script>
-    <script src="main.js"></script> -->
-    <script src="button.js"></script>
-    <script src="html2canvas.js"></script>
-    <script src="canvas2image.js"></script>
   </head>
   <body onload='init();'>
 	<header id="header">This gonna be our winning hack</header>
 
 
-	<canvas id="canvas" oncontextmenu="event.preventDefault();" width='1500' height='600'></canvas>
+	<canvas id="canvas"  width='1500' height='600'></canvas>
 	
 	<button type="button" onclick="uploadImageClicked()">Upload Image</button> 
 	<button type="button" onclick="colourItClicked()">Colour It!</button>
 	<button type="button" onclick="changeMode()">Change Mode</button>
-	<button type="button" onclick="saveImageClicked()"">Save Your Art</button>
-	<button type="button" onclick="tagItClicked()"">Tag It!</button>
+	<button type="button" onclick="saveImageClicked()">Save Your Art</button>
+	<button type="button" onclick="tagItClicked()">Tag It!</button>
 
 	<input type="range" min="0" max="100" value="50" onchange="vibranceSliderOnChange(this.value)" oninput="vibranceSliderChanging(this.value)"/>
 
@@ -40,5 +32,7 @@
 	<footer id="footer">This is the footer</footer>
 
 	<script src='test.js'></script>
+	<script src="button.js"></script>
+
   </body>
 </html>
