Can change greyness now

--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -18,14 +18,16 @@
 	<button type="button" onclick="saveImageClicked()">Save Your Art</button>
 	<button type="button" onclick="tagItClicked()">Tag It!</button>
 
-	<input type="range" min="0" max="100" value="50" onchange="vibranceSliderOnChange(this.value)" oninput="vibranceSliderChanging(this.value)"/>
+	<!-- <input type="range" min="0" max="100" value="50" onchange="vibranceSliderOnChange(this.value)" oninput="vibranceSliderChanging(this.value)"/>
 
 	<input type="range" min="0" max="100" value="50" onchange="hueSliderOnChange(this.value)" oninput="hueSliderChanging(this.value)"/>
 
 
 	<input type="range" min="0" max="100" value="50" onchange="saturationSliderOnChange(this.value)" oninput="saturationSliderChanging(this.value)"/>
 
-	<input type="range" min="0" max="100" value="50" onchange="colourSampleRateSliderOnChange(this.value)" oninput="colourSampleRateSliderChanging(this.value)"/>
+	<input type="range" min="0" max="100" value="50" onchange="colourSampleRateSliderOnChange(this.value)" oninput="colourSampleRateSliderChanging(this.value)"/> -->
+	<input type='range' min='1' max='10' step='1' onchange="changeThickness(this.value)" />
+	<input type='range' min='0' max='255' step='1' onchange="changeGreyness(this.value)" />
 
 
 
