--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -3,14 +3,22 @@
   <head>
     <meta charset="UTF-8">
     <title>Angel Hack</title>
+
+    <link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet', href='./bootstrap-3.3.6-dist/css/bootstrap.min.css'>
     <link rel="stylesheet" href="main.css">
+
 	<script src="./sdk/scripts/jquery.min.js"></script>
+	<script src='./bootstrap-3.3.6-dist/js/bootstrap.min.js'></script>
+
   </head>
   <body onload='init();'>
-	<header id="header">This gonna be our winning hack</header>
+	<header id="header">
+		<h1>Colour My World</h1>
+	</header>
 
 
-	<canvas id="canvas"  width='1500' height='600'></canvas>
+	<canvas id="canvas"  width='1519' height='600'></canvas>
 	
 	<button type="button" onclick="uploadImageClicked()">Upload Image</button> 
 	<button type="button" onclick="colourItClicked()">Colour It!</button>
