RD - added tag page

--- a/WebApp/tag_it.html
+++ b/WebApp/tag_it.html
@@ -5,18 +5,21 @@
     <title>Angel Hack-Tag It</title>
     <link rel="stylesheet" href="tag_it.css">
 	<script src="./sdk/scripts/jquery.min.js"></script>
-	<script type="text/javascript" src="./sdk/scripts/js.ext.js"></script>
-	<script type="text/javascript" src="./sdk/scripts/js.ext.dom.js"></script>
-	<script type="text/javascript" src="./sdk/engine/Module.js"></script>
-	<script async type="text/javascript" src="./sdk/engine/WacomInkEngine.js"></script>
-    <script src="main.js"></script>
     <script src="button.js"></script>
   </head>
   <body>
 	<h1 >Preview</h1>
 
-        <p style="text-align:center;"> <img src="/Users/rowandempster/git/Angelhack/WebApp/Sever/images/image.jpg" id="preview" /> </p>
+        <p style="text-align:center;"> <img src="/Users/rowandempster/git/Angelhack/WebApp/Sever/image.png" id="preview" /> </p>
 
-	<h1 >Choose your tags</h1>
+	<h1>Choose your tags</h1>
+	
+	<div style="height:100px; width:100px" class="total-title">
+    first text
+</div>
+	
+	
+	
+	<script src="tag_it.js"></script>
   </body>
 </html>
