--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -21,10 +21,10 @@
 	<canvas id="canvas"  width='1519' height='600'></canvas>
 	
 	<button type="button" onclick="uploadImageClicked()">Upload Image</button> 
-	<button type="button" onclick="colourItClicked()">Colour It!</button>
+
 	<button type="button" onclick="changeMode()">Change Mode</button>
-	<button type="button" onclick="saveImageClicked()">Save Your Art</button>
-	<button type="button" onclick="tagItClicked()">Tag It!</button>
+	<button type="button" onclick="saveImageClicked()">Colour It!</button>
+
 
 	<input type='range' min='1' max='10' step='1' onchange="changeThickness(this.value)" />
 	<input type='range' min='0' max='255' step='1' onchange="changeGreyness(this.value)" />
