Added a button for clearing canvas

--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -24,6 +24,7 @@
 
 	<button type="button" onclick="changeMode()">Change Mode</button>
 	<button type="button" onclick="saveImageClicked()">Colour It!</button>
+	<button type="button" onclick="clearCanvas()">Clean Canvas</button>
 
 
 	<input type='range' min='1' max='10' step='1' onchange="changeThickness(this.value)" />
