add upload local image

--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -20,7 +20,10 @@
 
 	<canvas id="canvas"  width='1519' height='600'></canvas>
 	
+
 	<button class='btn' type="button" onclick="uploadImageClicked()">Upload Image</button> 
+	<input type="file" id="my_file" style="display: none;" />
+
 
 	<button class='btn' type="button" onclick="changeMode()">Change Mode</button>
 	<button class='btn' type="button" onclick="saveImageClicked()">Colour It!</button>
