--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -10,6 +10,7 @@
 
 	<script src="./sdk/scripts/jquery.min.js"></script>
 	<script src='./bootstrap-3.3.6-dist/js/bootstrap.min.js'></script>
+	<script scr=clarifaiUtil.js></script>
 
   </head>
   <body onload='init();'>
@@ -18,13 +19,33 @@
 	</header>
 
 	<canvas id="canvas"  width='1519' height='600'></canvas>
+
 	<input type="file" id="my_file" style="display: none;" />	
 
-	<button class='btn action-button' type="button" onclick="uploadImageClicked()">Upload Image</button> 
-	<button class='btn action-button' type="button" onclick="changeMode()">Change Mode</button>
-	<button class='btn action-button' type="button" onclick="saveImageClicked()">Colour It!</button>
-	<button class='btn action-button' type="button" onclick="clearCanvas()">Clean Canvas</button>
-	<button class='btn action-button' id='modal-button' type="button" data-toggle="modal" data-target="#tagsModal">Launch demo modal</button>
+	
+
+	<button class='btn' type="button" onclick="uploadImageClicked()">Upload Image</button> 
+	<input type="file" id="my_file" style="display: none;" />
+
+
+	<button class='btn' type="button" onclick="changeMode()">Change Mode</button>
+	<button class='btn' type="button" onclick="saveImageClicked()">Colour It!</button>
+	<button class='btn' type="button" onclick="clearCanvas()">Clean Canvas</button>
+	<button type="button" class="btn" onclick="setupButtons()" data-toggle="modal" data-target="#tagsModal">
+		Launch demo modal
+	</button>
+
+	<input type='range' min='1' max='10' step='1' onchange="changeThickness(this.value)" />
+	<input type='range' min='0' max='255' step='1' onchange="changeGreyness(this.value)" />
+
+	<input id="vibrance" type="range" min="0.5" max="1.5" step='0.1' value="1" onchange="vibranceSliderOnChange(this.value)"/>
+
+	<input id="hue" type="range" min="-360" max="360" step='1' value="0" onchange="hueSliderOnChange(this.value)"/>
+
+
+	<input id="saturation" type="range" min="0" max="2" step='0.1' value="1" onchange="saturationSliderOnChange(this.value)" />
+
+
 
 	<div class='slider-container'>
 		<label>Thickness</label>
@@ -60,14 +81,34 @@
 		  </div>
 		  <div class="modal-body">
 			<img id='result-img' />
+		  <div class="modal-body" align=center>
+			<image id='preview' src="/Users/rowandempster/git/Angelhack/WebApp/Sever/result.png" width=500px height=300px>
+			<div> <button id='tag1' onclick="tagButtonClick('tag1')">tag1</button>
+			 <button id='tag2' onclick="tagButtonClick('tag2')">tag2</button>
+			  <button id='tag3' onclick="tagButtonClick('tag3')">tag3</button>
+			   <button id='tag4' onclick="tagButtonClick('tag4')">tag4</button>
+			    <button id='tag5' onclick="tagButtonClick('tag5')">tag5</button> </div> <br>
+			<div> <button id='tag6' onclick="tagButtonClick('tag6')">tag6</button> 
+			<button id='tag7' onclick="tagButtonClick('tag7')">tag7</button> 
+			<button id='tag8' onclick="tagButtonClick('tag8')">tag8</button> 
+			<button id='tag9' onclick="tagButtonClick('tag9')">tag9</button> 
+			<button id='tag10'onclick="tagButtonClick('tag10')">tag10</button> </div>
 		  </div>
 		  <div class="modal-footer">
 			<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-			<button type="button" class="btn btn-primary">Tweet</button>
+			<button type="button" class="btn btn-primary" onclick="tweetButtonClick()">Tweet</button>
 		  </div>
 		</div>
 	  </div>
 	</div>
+
+
+
+
+	<footer id="footer">This is the footer</footer>
+
+
+    <script scr=twitterUtil.js></script>
 
 	<script src='test.js'></script>
 	<script src="button.js"></script>
